objects/pse__Forecast_Calculation__c.object
<CustomObject>
    <customHelpPage>pse__ForecastCalculationHelp</customHelpPage>
    <description>This object is deprecated.</description>
    <fields>
        <fullName>pse__Backlog_Calculation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Backlog Calculation</label>
        <referenceTo>pse__Backlog_Calculation__c</referenceTo>
        <relationshipLabel>zDeprecated:Forecast Calculations</relationshipLabel>
        <relationshipName>Forecast_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Batch_Id__c</fullName>
        <description>An internal field used by PSE - not intended for display to users.</description>
        <externalId>true</externalId>
        <inlineHelpText>An internal field used by PSE - not intended for display to users.</inlineHelpText>
        <label>Batch Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Batch_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch Process</label>
        <referenceTo>pse__fflib_BatchProcess__c</referenceTo>
        <relationshipLabel>zDeprecated:Forecast Calculations</relationshipLabel>
        <relationshipName>Forecast_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Error_Details__c</fullName>
        <description>Details of errors that occurred during processing. Not intended for display.</description>
        <label>Error Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__Forecast_Enhanced_Calculation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Migration Lookup Field</label>
        <referenceTo>pse__Forecast_Enhanced_Calculation__c</referenceTo>
        <relationshipLabel>zDeprecated:Forecast Calculations</relationshipLabel>
        <relationshipName>Forecast_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>zDeprecated:Forecast Calculations</relationshipLabel>
        <relationshipName>Forecast_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Post_Process_Batch_Id__c</fullName>
        <description>Internal PSE field - not intended for display.</description>
        <externalId>true</externalId>
        <label>Post Process Batch Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>zDeprecated:Forecast Calculations</relationshipLabel>
        <relationshipName>Forecast_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>zDeprecated:Forecast Calculations</relationshipLabel>
        <relationshipName>Forecast_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Status__c</fullName>
        <label>Status</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__Time_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Period</label>
        <referenceTo>pse__Time_Period__c</referenceTo>
        <relationshipLabel>zDeprecated:Forecast Calculations</relationshipLabel>
        <relationshipName>Forecast_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__TotalNumberOfLogs__c</fullName>
        <label>Total Number of Logs</label>
        <summaryForeignKey>pse__Forecast_Calculation_Log__c.pse__Forecast_Calculation__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>zDeprecated:Forecast Calculation</label>
    <listViews>
        <fullName>pse__zAll</fullName>
        <filterScope>Everything</filterScope>
        <label>zAll</label>
    </listViews>
    <nameField>
        <label>Forecast Calculation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>zDeprecated:Forecast Calculations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>